added Sonarcloud to pom.xml #2

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,8 @@
         <jacoco.version>0.8.10</jacoco.version>
         <!-- OpenAPI -->
         <springdoc-openapi-starter-webflux-ui.version>2.1.0</springdoc-openapi-starter-webflux-ui.version>
+        <sonar.organization>rodrigodlcalle</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
