--- a/.github/workflows/test-sonar.yml
+++ b/.github/workflows/test-sonar.yml
@@ -2,7 +2,7 @@ name: SonarCloud
 on:
   push:
     branches:
-      - master
+      ['develop', 'release-*']
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
