--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <artifactId>iwvg-devops-delacalle-rodrigo</artifactId>
     <groupId>es.upm.miw</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-Relase</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
